# reactos

./: .clang-format  .clangd  .cvsignore  .editorconfig  .gitattributes  .gitignore  .gitmessage  .gitpod.Dockerfile  .gitpod.yml  .hgeol  .travis.yml  AMD64-BUILD-FIXES-SUMMARY.md  AMD64_BOOT_ANALYSIS_REPORT.md  AMD64_BOOT_SUCCESS.md  AMD64_BUILD_FIXES_APPLIED.md  AMD64_BUILD_WARNINGS_COMPREHENSIVE_ANALYSIS.md  AMD64_COMPLETE_FIX_SUMMARY.md  AMD64_CROSS_MODULE_FIX.md  AMD64_DESKTOP_BOOT_SUCCESS.md  AMD64_IO_MANAGER_STATUS.md  AMD64_KERNEL_FIXES_COMPLETE.md  AMD64_KERNEL_FIXES_SUMMARY.md  AMD64_KERNEL_STATUS_FINAL.md  AMD64_KERNEL_TODO.md  AMD64_OBJECT_MANAGER_STATUS.md  AMD64_REAL_DESKTOP_FIX.md  AMD64_UEFI_COMPLETE_FIX_SUMMARY.md  AMD64_UEFI_DESKTOP_IMPLEMENTATION.md  AMD64_UEFI_FINAL_IMPLEMENTATION.md  BOOT_FIX_SUMMARY.md  BUILD-AMD64-INSTRUCTIONS.md  CMakeLists.txt  CMakeMacros.cmake  CODEOWNERS  CODE_OF_CONDUCT.md  CODING_STYLE.md  CONFIG.md  CONTRIBUTING.md  COPYING  COPYING.ARM  (+131 more)
apitests/kernel32/: CMakeLists.txt  GetDriveType.c  kernel32_apitest.rbuild  testlist.c
apitests/w32knapi/: CMakeLists.txt  w32knapi.h  w32knapi.rbuild
apitests/ws2_32/: CMakeLists.txt  recv.c  testlist.c  ws2_32_apitest.rbuild
arwinss/freetype/: CMakeLists.txt  freetype.spec
arwinss/server/: CMakeLists.txt  w32ksvc.db  w32ksvc.h  win32k.rbuild  win32k.rc
base/services/: CMakeLists.txt  services.rbuild
base/system/: CMakeLists.txt  system.rbuild
boot/: CMakeLists.txt  boot.rbuild  boot_images.cmake  remaster.cmd  remaster.sh
boot/armllb/: armllb.rbuild  boot.s  crtsupp.c  envir.c  fw.c  main.c
boot/bootdata/: .gitattributes  CMakeLists.txt  autorun-bootcd.inf  autorun-hybridcd.inf  autorun-livecd.inf  autorun.inf  bootcd.ini  bootcd_regtest.ini  bootdata.rbuild  bootitems.inf.in  caroots.inf  de_DE.inf  floppy_pc98.ini  hivebcd.inf  hivecls.inf  hivecls_amd64.inf  hivecls_arm.inf  hivecls_i386.inf  hivedef.inf  hivedef_amd64.inf  hivedef_arm.inf  hivedef_i386.inf  hiveinst.inf  hiveinst_pc98.inf  hiveinst_xbox.inf  hivesetup.inf  hivesft.inf  hivesft_amd64.inf  hivesft_arm.inf  hivesft_i386.inf  hivesys.inf  hivesys_amd64.inf  hivesys_arm.inf  hivesys_i386.inf  hybridcd.ini  livecd.inf  livecd.ini  livecd_start.cmd  preinstall.inf  preinstall.ini  (+7 more)
boot/environ/: CMakeLists.txt
boot/freeldr/: CMakeLists.txt  FREELDR.INI  Makefile  freeldr.rbuild  notes.txt
boot/rtl/: CMakeLists.txt  blrtl.cmake  nlsboot.c
dll/cpl/: CMakeLists.txt  cpl.rbuild
dll/directx/: CMakeLists.txt  directx.rbuild
dll/keyboard/: CMakeLists.txt  keyboard.rbuild
dll/ntdll/: CMakeLists.txt  DllMainStub.c  Doxyfile  ntdll.rbuild  ntdll_vista.spec
dll/shellext/: CMakeLists.txt  shellext.rbuild
dll/win32/: CMakeLists.txt  win32.rbuild
drivers/: CMakeLists.txt  Doxyfile  directory.rbuild  drivers.rbuild
drivers/acpi/: CMakeLists.txt
drivers/base/: CMakeLists.txt  directory.rbuild
drivers/battery/: CMakeLists.txt  directory.rbuild
drivers/bluetooth/: CMakeLists.txt  directory.rbuild
drivers/bus/: CMakeLists.txt  Makefile  directory.rbuild
drivers/crypto/: CMakeLists.txt
drivers/csqtest/: csqtest.rbuild
drivers/dd/: Makefile
drivers/directx/: directory.rbuild
drivers/filesystems/: CMakeLists.txt  directory.rbuild
drivers/filters/: CMakeLists.txt  directory.rbuild
drivers/hid/: CMakeLists.txt  directory.rbuild
drivers/input/: CMakeLists.txt  Makefile  directory.rbuild
drivers/kmtest/: CMakeLists.txt  kmtest.rbuild  kmtest.rc  kmtestassist.rbuild  ntos_ex.c  ntos_fsrtl.c  ntos_io.c  ntos_ob.c
drivers/ksfilter/: CMakeLists.txt  directory.rbuild
drivers/lib/: Makefile
drivers/memtest/: memtest.rbuild
drivers/multimedia/: CMakeLists.txt  README  directory.rbuild  ks.h
drivers/network/: CMakeLists.txt  directory.rbuild
drivers/ntoskrnl/: IoEaTest.cpp
drivers/parallel/: CMakeLists.txt  directory.rbuild
drivers/processor/: CMakeLists.txt
drivers/sac/: CMakeLists.txt  directory.rbuild
drivers/serial/: CMakeLists.txt  directory.rbuild
drivers/setup/: directory.rbuild
drivers/storage/: CMakeLists.txt  Makefile  directory.rbuild  directory.xml
drivers/usb/: CMakeLists.txt  Makefile  directory.rbuild  directory.xml
drivers/video/: CMakeLists.txt  directory.rbuild  makefile
hal/: CMakeLists.txt  hal.dsp  hal.pspec  hal.rbuild  hal.spec
kmtests/: CMakeLists.txt  directory.rbuild  kmtest.rbuild  kmtest_drv.rbuild  readme.txt
lib/: CMakeLists.txt  directory.xml  lib.mak  lib.rbuild
media/: CMakeLists.txt  forwardcompatible.manifest  media.rbuild  systemcompatible.manifest
modules/: CMakeLists.txt  directory.rbuild  empty.rbuild
ntoskrnl/: .cvsignore  CMakeLists.txt  KrnlFun.c  Makefile.i386  guid.c  ke_i386_stkswitch.c  ke_i386_syscall.c  ke_i386_v86m_sup.c  mkconfig.c  noimpl.c  ntdll.S  ntdll_nt6.S  ntkrnlmp.rbuild  ntos.cmake  ntoskrnl-generic.rbuild  ntoskrnl.def  ntoskrnl.mc  ntoskrnl.pspec  ntoskrnl.rbuild  ntoskrnl.rc  ntoskrnl.sln  ntoskrnl.spec  ntoskrnl.vcproj  ntoskrnl.vsprops  ntoskrnl.xml  ntoskrnl_amd64.lds  ntoskrnl_arm.def  ntoskrnl_arm.lnk  ntoskrnl_i386.def  ntoskrnl_i386.lds  ntoskrnl_i386.lnk  ntoskrnl_powerpc.lnk  sysfuncs.lst
reactos/: .cvsignore  .gdbinit  CMakeLists.txt  CMakeMacros.cmake  COPYING  CREDITS  ChangeLog  Doxyfile  INSTALL  Jamfile  Makefile  NEWS  PreLoad.cmake  README  README.md  README.txt  ReactOS-amd64.rbuild  ReactOS-arm.rbuild  ReactOS-generic.rbuild  ReactOS-i386.rbuild  ReactOS-ppc.rbuild  ReactOS-ppc.xml  ReactOS.rbuild  ReactOS.sln  ReactOS.xml  TODO  aboot.bat  apistatus.lst  baseaddress.cfg  baseaddress.rbuild  baseaddress.xml  binhive.c  boot.bat  boot.hiv  bootc.lst  bootcd.bat  bootflop.bat  buildfamilies.rbuild  changes.txt  config  (+49 more)
rostests/: CMakeLists.txt  directory.rbuild  lorem ipsum.txt  readme.txt
test_kernel/: CMakeLists.txt  main.c  testkernel.rc
tools/: CMakeLists.txt  bin2c.mak  pecoff.h  ssprintf.cpp  ssprintf.h  tools.rbuild
win32ss/: CMakeLists.txt  gdihelp.h  napi.h  pch.h  sys-stubs.S  w32ksvc.db  w32ksvc.h  w32ksvc32.h  w32ksvc64.h  win32k.h  win32k.spec  win32kp.h
(+125236 files in other folders)
