
PROJECT(Drivers)

add_subdirectory(acpi)
add_subdirectory(base)
add_subdirectory(battery)
add_subdirectory(bluetooth)
add_subdirectory(bus)
add_subdirectory(crypto)
add_subdirectory(filesystems)
add_subdirectory(filters)
#add_subdirectory(fs_minifilter)
add_subdirectory(hid)
add_subdirectory(input)
add_subdirectory(ksfilter)
add_subdirectory(multimedia)
add_subdirectory(network)
add_subdirectory(parallel)
add_subdirectory(processor)
add_subdirectory(sac)
add_subdirectory(serial)
add_subdirectory(setup)
add_subdirectory(storage)
add_subdirectory(usb)
add_subdirectory(wdm)
add_subdirectory(wmi)
